2003-02-22  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf.c: (gconf_engine_set),
	(gconf_engine_associate_schema): don't rely on
	caller passing in a valid GError** in assertions.

2003-02-12  Mark McLoughlin  <mark@skynet.ie>

	* backends/xml-dir.c: (listify_foreach): set the schema
	name even when the key is set.

2003-01-29  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added am, mk to ALL_LINGUAS

2003-01-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-20  Havoc Pennington  <hp@pobox.com>

        * NEWS: update
	
	* configure.in: 2.2.0

2003-01-12  Havoc Pennington  <hp@pobox.com>

	* configure.in: 2.1.90

2002-12-04  Havoc Pennington  <hp@pobox.com>

	* backends/markup-tree.c (markup_entry_get_value): fix 
	a logic error causing us to deref a null pointer, reported 
	by  Brian Alexander Quistorff

2002-11-22  Dan Mills  <thunder@ximian.com>

	* configure.in: fix gtk-doc version check.

2002-11-09  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-02  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-internals.c
	(gconf_value_list_to_primitive_list_destructive): fix using the 
	wrong type (value->type not value->list_type) in an error message, 
	#96210

2002-10-18  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-internals.c (subst_variables): patch from 
	Benn Vosseteig fixing a crash with a long path to $HOME 
	
2002-09-30  Yanko Kaneti <yaneti@declera.com>

	* doc/gconf/gconf.sgml:
	* doc/gconf-1.0.dtd: Some additions to match the full range of schema
	elements curently accepted by gconftool. Supposedly complete now.

2002-09-18  Yanko Kaneti <yaneti@declera.com>

	* doc/Makefile.am: change the gconf-1.0.dtd install location to 
	$(datadir)/sgml/gconf which sounds more standards compliant.

2002-09-18  Havoc Pennington  <hp@pobox.com>
